--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
  text-align: center;
  max-width: 400px;
  margin: 0 auto;
+
 }
 .container,.text {
     margin-top:2rem;
@@ -29,6 +30,7 @@ body{
     padding: 1.5rem;
     margin-bottom: 1rem;
     border: 1px solid rgb(224, 219, 219);
+    transition: all 1s;
 }
 
 .card{
@@ -38,16 +40,19 @@ body{
 }
  .card .icon {
      position: absolute;
-     top :64%;
+     top :55%;
      left: 50%;
      border-radius: 50%;
      background-color: rgb(250, 240, 241);
-     transform: translate( -50%, -50% ) 
+     transform: translate( -50%, -50% ) ;
+     background: transparent;
+
  }
 
 .text-details{
     text-transform: uppercase;
-    background-color: rgb(218, 191, 191);
+    /* background-color: rgb(218, 191, 191); */
+   font-weight: bold;
     
 }
 .city-name{
@@ -84,9 +89,16 @@ footer{
  @media(max-width:400px){
     
      .container{
-         width:300px;
+         /* width:400px;
+         transition: all 1s; */
      }
    .card .icon {
     top:58%
      }
+     .chang-loction input{
+     padding: 0.5rem;
+    margin-bottom: 1rem;
+    border: 1px solid rgb(224, 219, 219);
+}
+
  }
