--- a/style.css
+++ b/style.css
@@ -4,11 +4,13 @@
     box-sizing: 0;
 }
 body{
-    background: #969393;
+    /* background: #969393; */
     letter-spacing: 0.2rem;
     font-size: 0.9rem;
     min-height: 100vh;
-
+   background:linear-gradient( rgb(121, 205, 253) , rgb(199, 197, 197)) ;
+ 
+  
 }
 .container{
  text-align: center;
@@ -26,14 +28,16 @@ body{
     flex-direction: column;
 }
 .chang-loction label{
-    margin-top: 1rem;
+    margin: 1rem;
     font-weight: bold;
+    font-size: 1.5rem;
 }
 .chang-loction input{
     padding: 1.5rem;
     margin-bottom: 1rem;
     border: 1px solid rgb(224, 219, 219);
     transition: all 1s;
+    border-radius: 7px;
 }
 
 .card{
@@ -58,7 +62,7 @@ body{
     
 }
 .city-name{
-    margin-top: 2rem;
+    margin-top: 1rem;
 
 }
 .city-name,.weather-condition{
@@ -69,7 +73,7 @@ body{
    padding: 1rem;
 }
 .display span{
-    /* font-size: 30px; */
+    font-size: 30px;
 }
 footer{
     text-align: center;
